# wasm.h

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MEMORIES.md  Makefile  PLAN.md  README.md  SECURITY.md  THIRD_PARTY.md  WASMGC.md  WASM_PLAN.md  basic_add.c  wasi.h  wasi_test.c  wasm.c  wasm.h  wasm2api.c  wasm_test.c  wl.h  wl_test.c
.github/workflows/: ci.yml
.pi/: Containerfile
cmake/: CopyWabtTools.cmake  RunCTestNoFail.cmake  RunWast2JsonSafe.cmake  wasm_hConfig.cmake.in
docs/: BUILDING.md  EMBEDDING.md  README.md  WASI_PLAN.md  WASL.md  WASM2API_PLAN.md  WASM_API_IMPROVEMENTS.md  WASM_COMPLIANCE.md  WASM_COMPLIANCE_2026_04_06.md  WASM_COMPLIANCE_2026_04_07.md  WASM_PLAN.md
examples/: CMakeLists.txt  basic_add.h  basic_add_demo.c  session_math.c  session_math.h  session_math_demo.c  session_math_wasm.c  sqlite_wasm.c  sqlite_wasm.h  sqlite_wasm_demo.c
test/: CMakeLists.txt  Makefile  README.md  component_alias_smoke.wat  component_instance_smoke.wat  component_runner.c  component_smoke.wit  component_start_smoke.wat  fixture_runner.c  fuzz_wasm_load.c  runner.c  spectest_runner.c  spectest_support.wat  wasi_wasmtime_runner.c  wasm_core_test.c  wasm_test.c  wl_test.c
test/fixtures/: i64_return.c  start_constructor.c  stdout_print.c  switch_table.c  tail_call.c  trunc_sat.c  unresolved_import.c
tools/: .gitignore
wasm/: Makefile  README.md  runner.c
wasm/fixtures/: basic_add.c  bulk_memory.c  function_pointer.c  sign_extension.c  trunc_sat.c
